Give a little bit more space to filtering section, preventing container from hiding small overflows

--- a/static/main/common.css
+++ b/static/main/common.css
@@ -646,7 +646,7 @@ div.filteringSection {
     overflow-y: hidden;
     white-space: nowrap;
     margin:0px 2px 0px 2px;
-    max-height: 276px;
+    max-height: 285px;
 }
 div.filterTable {
     border:none;
